@@ -10,6 +10,11 @@ BaseMetaPkgs=ubuntu-minimal
 Demotions=demotions.cfg
 AllowUnauthenticated=yes
 
+[Aufs]
+;EnableFullOverlay=yes
+;EnableChrootOverlay=yes
+;EnableChrootRsync=yes
+
 [Sources]
 From=intrepid
 To=jaunty
