@@ -84,6 +84,17 @@ Components=main,restricted,universe,multiverse
 ;SourcesList-ia64=prerequists-sources.ports.list
 ;SourcesList-hppa=prerequists-sources.ports.list
 
+[Aufs]
+; this is a xor option, either full or chroot overlay
+;EnableFullOverlay=yes
+;EnableChrootOverlay=yes
+; sync changes from the chroot back to the real system
+;EnableChrootRsync=yes
+; what chroot dir to use
+;ChrootDir=/tmp/upgrade-chroot
+; the RW dir to use (either for full overlay or chroot overlay)
+;RWDir=/tmp/upgrade-rw
+
 [Network]
 MaxRetries=3
 
