@@ -45,6 +45,7 @@ from DistUpgradeConfigParser import DistUpgradeConfig
 from DistUpgradeFetcherCore import country_mirror
 from DistUpgradeQuirks import DistUpgradeQuirks
 from DistUpgradeAptCdrom import AptCdrom
+from DistUpgradeAufs import setupAufs, aufsOptionsAndEnvironmentSetup
 
 from sourceslist import SourcesList, SourceEntry, is_mirror
 from distro import Distribution, get_distro, NoDistroTemplateException
@@ -102,7 +103,10 @@ class DistUpgradeController(object):
         # ConfigParser deals only with strings it seems *sigh*
         self.config.add_section("Options")
         self.config.set("Options","withNetwork", str(self.useNetwork))
-        
+
+        # aufs stuff
+        aufsOptionsAndEnvironmentSetup(self.options, self.config)
+
         # some constants here
         self.fromDist = self.config.get("Sources","From")
         self.toDist = self.config.get("Sources","To")
@@ -314,7 +318,8 @@ class DistUpgradeController(object):
                 logging.debug("python symlink points to: '%s', but expected is '%s' or '%s'" % (fs_default_version, expected_default, os.path.join('/usr/bin', expected_default)))
                 return False
         return True
-    
+
+
     def prepare(self):
         """ initial cache opening, sanity checking, network checking """
         # first check if that is a good upgrade
@@ -327,6 +332,28 @@ class DistUpgradeController(object):
                              _("An upgrade from '%s' to '%s' is not "
                                "supported with this tool." % (release, self.toDist)))
             sys.exit(1)
+
+        # setup aufs
+        if self.config.getWithDefault("Aufs", "EnableFullOverlay", False):
+            aufs_rw_dir = self.config.get("Aufs","RWDir")
+            if not setupAufs(aufs_rw_dir):
+                logging.error("aufs setup failed")
+                self._view.error(_("Sandbox setup failed"),
+                                 _("It was not possible to create the sandbox "
+                                   "environment."))
+                return False
+
+            # all good, tell the user about the sandbox mode
+            logging.info("running in aufs overlay mode")
+            self._view.information(_("Sandbox mode"),
+                                   _("This upgrade is running in sandbox "
+                                     "(test) mode. All changes are written "
+                                     "to '%s' and will be lost on the next "
+                                     "reboot.\n\n"
+                                     "*No* changes written to a systemdir "
+                                     "from now until the next reboot are "
+                                     "permanent.") % aufs_rw_dir)
+
         # setup backports (if we have them)
         if self.options and self.options.havePrerequists:
             backportsdir = os.getcwd()+"/backports"
