@@ -33,6 +33,9 @@ from gettext import gettext as _
 def do_commandline():
     " setup option parser and parse the commandline "
     parser = OptionParser()
+    parser.add_option("-s", "--sandbox", dest="useAufs", default=False,
+                      action="store_true",
+                      help=_("Sandbox upgrade using aufs"))
     parser.add_option("-c", "--cdrom", dest="cdromPath", default=None,
                       help=_("Use the given path to search for a cdrom with upgradable packages"))
     parser.add_option("--have-prerequists", dest="havePrerequists",
