@@ -28,6 +28,7 @@ import os
 import apt_pkg 
 import signal
 
+from DistUpgradeAufs import doAufsChroot, doAufsChrootRsync
 from DistUpgradeApport import *
 
 
@@ -146,6 +147,12 @@ class InstallProgress(apt.progress.InstallProgress):
   def run(self, pm):
     pid = self.fork()
     if pid == 0:
+      # check if we need to setup/enable the aufs chroot stuff
+      if "RELEASE_UPGRADE_USE_AUFS_CHROOT" in os.environ:
+        if not doAufsChroot(os.environ["RELEASE_UPGRADE_AUFS_RWDIR"],
+                            os.environ["RELEASE_UPGRADE_USE_AUFS_CHROOT"]):
+          print "ERROR: failed to setup aufs chroot overlay"
+          os._exit(1)
       # child, ignore sigpipe, there are broken scripts out there
       # like etckeeper (LP: #283642)
       signal.signal(signal.SIGPIPE,signal.SIG_IGN) 
@@ -153,6 +160,14 @@ class InstallProgress(apt.progress.InstallProgress):
       os._exit(res)
     self.child_pid = pid
     res = self.waitChild()
+    # check if we want to sync the changes back, *only* do that
+    # if res is positive
+    if (res == 0 and
+        "RELEASE_UPGRADE_RSYNC_AUFS_CHROOT" in os.environ):
+      logging.info("doing rsync commit of the update")
+      if not doAufsChrootRsync(os.environ["RELEASE_UPGRADE_USE_AUFS_CHROOT"]):
+        logging.error("FATAL ERROR: doAufsChrootRsync() returned FALSE")
+        return False
     return res
   
   def error(self, pkg, errormsg):
