@@ -786,6 +786,8 @@ class UpdateManager(SimpleGladeApp):
   def on_button_dist_upgrade_clicked(self, button):
       #print "on_button_dist_upgrade_clicked"
       fetcher = DistUpgradeFetcherGtk(new_dist=self.new_dist, parent=self, progress=self.progress)
+      if self.options.sandbox:
+          fetcher.run_options.append("--sandbox")
       fetcher.run()
       
   def new_dist_available(self, meta_release, upgradable_to):
