@@ -35,6 +35,8 @@ if __name__ == "__main__":
   parser.add_option ("-f", "--frontend", default="DistUpgradeViewText",
                      dest="frontend", 
                      help=_("Run the specified frontend"))
+  parser.add_option ("-s","--sandbox", action="store_true", default=False,
+                     help=_("Test upgrade with a sandbox aufs overlay"))
 
   (options, args) = parser.parse_args()
 
@@ -54,4 +56,6 @@ if __name__ == "__main__":
   fetcher.run_options += ["--mode=%s" % options.mode,
                           "--frontend=%s" % options.frontend,
                           ]
+  if options.sandbox:
+    fetcher.run_options.append("--sandbox")
   fetcher.run()
