@@ -27,8 +27,9 @@ update-manager (1:0.100) UNRELEASED; urgency=low
       calculation (thanks to Richie), LP: #273184
   * DistUpgrade/DistUpgradeController.py:
     - do not allow gtk/kde upgrades over ssh session (LP: #322482)
+  * merged aufs branch (disabled by default but useful for testing)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 04 Mar 2009 17:28:08 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Mar 2009 20:25:55 +0100
 
 
 update-manager (1:0.99) jaunty; urgency=low
